@@ -1,5 +1,9 @@
 2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>
 
+	* w3m-xmas.el (toplevel): Require 'w3m-image.
+	(w3m-make-glyph): New inline function.
+	(w3m-create-image): Resize images when w3m-resize-images is non-nil.
+
 	* w3m-form.el (w3m-string-to-char-list)[XEmacs]: Use string-to-list
 	instead of string-to-char-list.
 	(w3m-int-to-char): New alias.
